[project]
name = "ComfyUI-TurntableGSViewer"
description = "Tiny Gaussian Splat turntable viewer node for ComfyUI."
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-TurntableGSViewer"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-TurntableGSViewer"

[tool.comfy]
PublisherId = "pozzettiandrea"
DisplayName = "ComfyUI-TurntableGSViewer"
Icon = ""
includes = [] 

