[project]
name = "ComfyUI-GSViewer"
description = "Tiny Gaussian Splat turntable viewer node for ComfyUI."
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-GSViewer"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-GSViewer"

[tool.comfy]
PublisherId = "pozzettiandrea"
DisplayName = "ComfyUI-GSViewer"
Icon = ""
includes = [] 

